Fixed content issue so only one block stretches when new content addded as well as allowed popups to appear on hover

--- a/css/style.css
+++ b/css/style.css
@@ -258,16 +258,67 @@ h2 {
 }
 
 a.search {
+  display: block;
   width: 32px;
   height: 32px;
   text-decoration: none;
   color: #ffffff;
-  background: #acc3b6 url("../img/icon-search.png") center no-repeat;
+  background: url("../img/icon-search.png") center no-repeat;
+  background-color: rgba(255, 255, 255, 0.2);
   border-radius: 50%;
+  z-index: 3;
+}
+
+.search-block {
+  width: 340px;
+  border-radius: 4px;
+  background-color: #f8f7f4;
+  color: #323232;
+  padding: 20px 15px 20px 15px;
+  box-sizing: border-box;
+  position: absolute;
+  top: 35px;
+  right: 0;
+  display: none;
+}
+
+.search-block input {
+  margin: 0;
+  padding: 0;
+  display: block;
+  box-sizing: border-box;
+  width: 309px;
+  padding: 8px 12px;
+  border: 1px solid #d3d3d2;
+  border-radius: 4px;
+  font-family: "Roboto", "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: normal;
+  color: #999999;
+}
+
+.search-block input:hover {
+  box-shadow: 0 0 0 1px #c7c6c5;
+}
+
+.search-block input:focus {
+  color: #323232;
+  font-weight: bold;
 }
 
 a.search:hover {
   background: #f8f7f4 url("../img/icon-search-hover.png") center no-repeat;
+}
+
+.popup-search {
+  position: relative;
+  display: inline-block;
+  padding-bottom: 20px;
+}
+
+.popup-search:hover .search-block {
+  display: block;
 }
 
 a.login {
@@ -281,7 +332,7 @@ a.login {
   font-size: 14px;
   line-height: 16px;
   color: #ffffff;
-  background-color: #a0b3a9;
+  background-color: rgba(255, 255, 255, 0.2);
   border-radius: 14px;
 }
 
@@ -304,7 +355,136 @@ a.login:hover::before {
   background: url("../img/icon-login-hover.png") no-repeat;
 }
 
+.login-block {
+  width: 278px;
+  box-sizing: border-box;
+  border-radius: 5px;
+  background-color: #f8f7f4;
+  padding: 20px;
+  /*position: relative;*/
+  position: absolute;
+  top: 35px;
+  right:7px;
+  z-index: 3;
+  display: none;
+}
+
+.login-block input {
+  margin: 0;
+  padding: 0;
+  display: block;
+  width: 239px;
+  box-sizing: border-box;
+  border: 1px solid #d3d3d2;
+  margin-right: 10px;
+  padding: 8px 14px;
+  border-radius: 4px;
+  margin-bottom: 22px;
+  color: #999999;
+  font-family: "Roboto", "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: normal;
+}
+
+.login-block input:hover {
+  box-shadow: 0 0 0 1px #c7c6c5;
+}
+
+.login-block input:focus{
+  border: 1px solid #8fbdec;
+  font-family: "Roboto", "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: bold;
+  color: #323232;
+}
+
+.login-button {
+  padding: 10px 25px;
+  border: 0;
+}
+
+.login-wrapper a {
+  float: left;
+}
+
+.login-help {
+  width: 50%;
+  float: right;
+}
+
+.login-help a {
+  display: inline;
+  color: #323232;
+  font-family: "Roboto", "Arial", sans-serif;
+  font-size: 13px;
+  line-height: 24px;
+  font-weight: normal;
+  text-decoration: underline;
+}
+
+.login-help a:hover,
+.login-help a:active {
+  color: #e84d37;
+}
+
+.login-block input[type="email"] + span {
+  display: none;
+}
+
+.login-block input[type="text"] + span {
+  display: none;
+}
+
+.login-block input:focus:-moz-placeholder {
+  font-weight: normal;
+}
+
+.login-block input:focus::-webkit-input-placeholder {
+  font-weight: normal;
+}
+
+.login-block input:focus::-moz-placeholder {
+  font-weight: normal;
+}
+
+.login-block input:focus:-ms-input-placeholder {
+  font-weight: normal;
+}
+
+.login-block input[type="email"]:focus + span {
+  display: block;
+  font-family: "Roboto", "Arial", sans-serif;
+  font-size: 11px;
+  line-height: 13px;
+  color: #5b9ddf;
+  position: absolute;
+  top: 3px;
+  left:35px;
+}
+
+.login-block input[type="text"]:focus + span {
+  display: block;
+  font-family: "Roboto", "Arial", sans-serif;
+  font-size: 11px;
+  line-height: 13px;
+  color: #5b9ddf;
+  position: absolute;
+  top: 65px;
+  left:35px;
+}
+.login-popup {
+  position: relative;
+  display: inline-block;
+  padding-bottom: 20px;
+}
+.login-popup:hover .login-block {
+  display: block;
+}
+
 a.cart-empty {
+  display: block;
   position: relative;
   padding: 8px 35px 8px 45px;
   text-decoration: none;
@@ -312,7 +492,7 @@ a.cart-empty {
   font-size: 14px;
   line-height: 16px;
   color: #ffffff;
-  background-color: #a0b3a9;
+  background-color: rgba(255, 255, 255, 0.2);
   border-radius: 14px;
 }
 
@@ -505,6 +685,7 @@ a.phone {
   padding: 18px;
   background-size: cover;
   background-position: 50% 50%;
+  align-self: flex-start;
 }
 
 .promo-chocolate {
@@ -519,6 +700,7 @@ a.phone {
   padding: 18px;
   background-size: cover;
   background-position: 50% 50%;
+  align-self: flex-start;
 }
 
 .promo-jam h2,
@@ -1636,6 +1818,9 @@ figure.item img {
   color: #323232;
   border-radius: 5px;
   position: absolute;
+  top: 35px;
+  right: 0;
+  z-index: 3;
   display: none;
 }
 
@@ -1731,121 +1916,12 @@ figure.item img {
 .table-cart th, td {
   height: 48px;
 }
-
-.login-block {
-  width: 278px;
-  box-sizing: border-box;
-  border-radius: 5px;
-  background-color: #f8f7f4;
-  padding: 20px;
+.popup-mini-cart {
   position: relative;
-  display: none;
 }
 
-.login-block input {
-  margin: 0;
-  padding: 0;
+.popup-mini-cart:hover .cart-mini-view {
   display: block;
-  width: 239px;
-  box-sizing: border-box;
-  border: 1px solid #d3d3d2;
-  margin-right: 10px;
-  padding: 8px 14px;
-  border-radius: 4px;
-  margin-bottom: 22px;
-  color: #999999;
-  font-family: "Roboto", "Arial", sans-serif;
-  font-size: 14px;
-  line-height: 24px;
-  font-weight: normal;
-}
-
-.login-block input:hover {
-  box-shadow: 0 0 0 1px #c7c6c5;
-}
-
-.login-block input:focus{
-  border: 1px solid #8fbdec;
-  font-family: "Roboto", "Arial", sans-serif;
-  font-size: 14px;
-  line-height: 24px;
-  font-weight: bold;
-  color: #323232;
-}
-
-.login-button {
-  padding: 10px 25px;
-  border: 0;
-}
-
-.login-wrapper a {
-  float: left;
-}
-
-.login-help {
-  width: 50%;
-  float: right;
-}
-
-.login-help a {
-  display: inline;
-  color: #323232;
-  font-family: "Roboto", "Arial", sans-serif;
-  font-size: 13px;
-  line-height: 24px;
-  font-weight: normal;
-  text-decoration: underline;
-}
-
-.login-help a:hover,
-.login-help a:active {
-  color: #e84d37;
-}
-
-.login-block input[type="email"] + span {
-  display: none;
-}
-
-.login-block input[type="text"] + span {
-  display: none;
-}
-
-.login-block input:focus:-moz-placeholder {
-  font-weight: normal;
-}
-
-.login-block input:focus::-webkit-input-placeholder {
-  font-weight: normal;
-}
-
-.login-block input:focus::-moz-placeholder {
-  font-weight: normal;
-}
-
-.login-block input:focus:-ms-input-placeholder {
-  font-weight: normal;
-}
-
-.login-block input[type="email"]:focus + span {
-  display: block;
-  font-family: "Roboto", "Arial", sans-serif;
-  font-size: 11px;
-  line-height: 13px;
-  color: #5b9ddf;
-  position: absolute;
-  top: 3px;
-  left:35px;
-}
-
-.login-block input[type="text"]:focus + span {
-  display: block;
-  font-family: "Roboto", "Arial", sans-serif;
-  font-size: 11px;
-  line-height: 13px;
-  color: #5b9ddf;
-  position: absolute;
-  top: 65px;
-  left:35px;
 }
 
 .overlay {
@@ -2038,37 +2114,3 @@ figure.item img {
   transform: rotate(-45deg);
 }
 
-.search-block {
-  width: 340px;
-  border-radius: 4px;
-  background-color: #f8f7f4;
-  color: #323232;
-  padding: 20px 15px 20px 15px;
-  box-sizing: border-box;
-  display: none;
-}
-
-.search-block input {
-  margin: 0;
-  padding: 0;
-  display: block;
-  box-sizing: border-box;
-  width: 309px;
-  padding: 8px 12px;
-  border: 1px solid #d3d3d2;
-  border-radius: 4px;
-  font-family: "Roboto", "Arial", sans-serif;
-  font-size: 14px;
-  line-height: 24px;
-  font-weight: normal;
-  color: #999999;
-}
-
-.search-block input:hover {
-  box-shadow: 0 0 0 1px #c7c6c5;
-}
-
-.search-block input:focus {
-  color: #323232;
-  font-weight: bold;
-}
